# iAI

./: .gitignore  README.md  pyproject.toml
src/: embedder.py  loader.py  main.py  qa_engine.py  text_splitter.py
